--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <meta version="0.3">
+    <meta version="0.8.1">
     <title>[CHANGE] From Reverse Geocoding example</title>
     <link rel="stylesheet" type="text/css" href="css/mapas.css" />
     <script type="text/javascript" src="js/mapas.js" ></script>
@@ -18,8 +18,10 @@
       <!--input id="submit" type="button" value="Localizar"-->
     </div>
     <div id="map"></div>
-    <div id="informar" class="wiki">información desde la wiki</div>
-
+    <div id="informaciones" class="wiki">Información desde la wiki
+    <div id="informar" >lugar</div>
+    <div id="info_plus">-información ampliada-</div>
+    </div>
   </body>
   </body>
 </html>
