--- a/www/index.html
+++ b/www/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <meta version="0.9.2">
-    <title>[CHANGE] From Reverse Geocoding example</title>
+    <meta version="1.0.0">
+    <title>Info Town - PMV 1</title>
     <link rel="stylesheet" type="text/css" href="css/mapas.css" />
     <script type="text/javascript" src="js/mapas.js" ></script>
         <script async defer
