--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <meta version="1.0.0">
+    <meta version="1.0.1">
     <title>Info Town - PMV 1</title>
     <link rel="stylesheet" type="text/css" href="css/mapas.css" />
     <script type="text/javascript" src="js/mapas.js" ></script>
@@ -21,6 +21,7 @@
     <div id="informaciones" class="wiki">Información desde la wiki
     <div id="informar" >lugar</div>
     <div id="info_plus">-información ampliada-</div>
+    <div id="init_LatLong"></div>
     </div>
   </body>
   </body>
