--- a/www/index.html
+++ b/www/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <meta version="2.0.0">
-    <title>Info Town - Prototipo 2</title>
+    <meta version="3.0.0">
+    <title>[CHANGE] Info Town</title>
     <link rel="stylesheet" type="text/css" href="css/mapas.css" />
     <script type="text/javascript" src="js/mapas.js" ></script>
         <script async defer
@@ -18,10 +18,10 @@
       <!--input id="submit" type="button" value="Localizar"-->
     </div>
     <div id="map"></div>
-    <div id="informaciones" class="wiki">Información desde la wiki
-    <div id="informar" >lugar</div>
+    <div id="informaciones" class="wiki">Información desde Wikipedia
+    <div id="info_nombre" >lugar</div>
     <div id="info_plus">-información ampliada-</div>
-    <div id="init_LatLong"></div>
+    <div id="init_LatLong">lat-long</div>
     </div>
   </body>
   </body>
