--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
     <title>[CHANGE] Info Town</title>
     <link rel="stylesheet" type="text/css" href="css/mapas.css" />
     <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
-    <script type="text/javascript" src="js/mapas.js" ></script>
+    <script type="text/javascript" src="js/mapas2.js" ></script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAr6WjP2-THB-i9F3DaaBkmmB0cUmHb3i0&callback=initMap">
     </script>
