--- a/www/index.html
+++ b/www/index.html
@@ -3,14 +3,13 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <meta version="4.0.0">
+    <meta version="5.0.1">
     <title>[CHANGE] Info Town</title>
     <link rel="stylesheet" type="text/css" href="css/mapas.css" />
     <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
     <script type="text/javascript" src="js/mapas2.js" ></script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAr6WjP2-THB-i9F3DaaBkmmB0cUmHb3i0&callback=initMap">
-    </script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAr6WjP2-THB-i9F3DaaBkmmB0cUmHb3i0&callback=initMap&libraries=places"></script>
+    <!--script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAr6WjP2-THB-i9F3DaaBkmmB0cUmHb3i0&libraries=places"></script-->
   </head>
   <body>
 
