--- a/www/index.html
+++ b/www/index.html
@@ -13,17 +13,17 @@
   </head>
   <body>
 
-        <div id="floating-panel">
+  <div id="floating-panel" class="floating-panel">
+    <div id="info_nombre" class="wiki">lugar</div>
+    <div id="info_plus" class="info_plus">-información ampliada-</div>
+    <div id="productoTipico" class="productoTipico">producto Tipico</div>
+    <div id="informaciones" class="informaciones">Información desde Wikipedia.</div>
+    <!--div id="init_LatLong" class="init_LatLong">lat-long</div-->
       <!--input id="latlng" type="text" value="37.397056, -6.009778"-->
       <!--input id="submit" type="button" value="Localizar"-->
-    </div>
-    <div id="map"></div>
-    <div id="informaciones" class="wiki">Información desde Wikipedia
-    <div id="info_nombre" >lugar</div>
-    <div id="productoTipico">producto Tipico</div>
-    <div id="info_plus">-información ampliada-</div>
-    <div id="init_LatLong">lat-long</div>
-    </div>
-  </body>
+  </div >
+    
+    <div id="map" class="map"></div>
+
   </body>
 </html>
