--- a/www/index.html
+++ b/www/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <meta version="5.0.1">
-    <title>[CHANGE] Info Town</title>
+    <meta version="5.2.1">
+    <title>Info Town</title>
     <link rel="stylesheet" type="text/css" href="css/mapas.css" />
     <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
     <script type="text/javascript" src="js/mapas2.js" ></script>
@@ -18,10 +18,11 @@
     <div id="info_plus" class="info_plus">-información ampliada-</div>
     <div id="productoTipico" class="productoTipico">producto Tipico</div>
     <div id="informaciones" class="informaciones">Información desde Wikipedia.</div>
-    <!--div id="init_LatLong" class="init_LatLong">lat-long</div-->
       <!--input id="latlng" type="text" value="37.397056, -6.009778"-->
       <!--input id="submit" type="button" value="Localizar"-->
   </div >
+    <!--div id="init_LatLong" class="init_LatLong">En esta versión demo<br> la ubicación cambia automáticamente, <br>imitando un viaje.
+      <br> Pulsa en los globos de color verde <br>para ver información de empresas cercanas.</div-->
     
     <div id="map" class="map"></div>
 
